iac/aks-deploy/manifests/ingress/airflow.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-web
  namespace: airflow
spec:
  selector:
    component: webserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
