iac/aks-deploy/manifests/ingress/airflow_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-web
  namespace: airflow
spec:
  selector:
    app: airflow-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - airflow.privatedns.datamaster
      secretName: certificate-tls
  rules:
    - host: airflow.privatedns.datamaster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-web
                port:
                  number: 8080
