iac/aks-deploy/manifests/ingress/dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-kubernetes
  namespace: dashboard
labels:
  app.kubernetes.io/name: kubernetes-dashboard
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 8443
    protocol: TCP
    name: https
  selector:
    app.kubernetes.io/name: kubernetes-dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: dashboard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: dashboard-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dashboard.datamaster.internal
    secretName: certificate-tls
  rules:
  - host: dashboard.datamaster.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-kubernetes
            port:
              number: 443
