iac/aks-deploy/manifests/ingress/spark-history.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-history-ingress
  namespace: spark-history
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - spark-history.privatedns.datamaster
      secretName: certificate-tls
  rules:
    - host: spark-history.privatedns.datamaster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-history-server
                port:
                  number: 80
